--- a/styles/style.css
+++ b/styles/style.css
@@ -2021,6 +2021,7 @@ body.hero .site-header__title {
   margin: 1rem 1.25rem;
   text-wrap: balance; /* 対応ブラウザで見栄えUP */
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
 }
 @supports (backdrop-filter: blur(2px)) {
   body.hero .site-header__title .site-header__title {
